--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@kihyeon-hong/passwordsecurityclient": "^1.0.1",
+    "http": "0.0.1-security",
     "request": "^2.88.2"
   }
 }
