--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=ghp~
 @kihyeon-hong:registry=https://npm.pkg.github.com/
