--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@kihyeon-hong/password_security_client": "^1.1.3",
+    "@kihyeon-hong/password_security_client": "^1.1.5",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "http": "0.0.1-security",
     "request": "^2.88.2"
   }
